TimeBox Change Log
------------------

TimeBox 0.11.7: predicted


TimeBox 0.10.6: released 2016-Mar-04
- Introduces functions to get information on data sets without the need
  to load the full data: TS.LOADMETA and TS.SAVEMETA handle meta-
  information within data sets, and TS.GETDIM retrieves the number of
  instances and the length of the series.
- Introduces TS.GETPATH to return the path where a data set file is
  supposed to be stored.
- Allows TS.MAKEFOLDS to make validation folds: you may provide an index
  over an existing fold to obtain a new set of folds constructed on the 
  indexed data.
- Adds TB.SHARPSHOOT to produce SharpShoot plots, and add option
  -nofigure to TB.SCAT. This is useful to use TB.SCAT in subplots.
- Adds TB.MERGECELLS to work with data loaded by TS.LOADFILES: this
  function actually concatenates cells with equal number of rows into a
  single cell, removing rows where any of the original cell had missing
  data.
- Fixes bugs with TB.SPLITSTRING, TS.GETNAMES, and TS.SAVE. Also
  improves documentation of several functions and some error messages
  are now more informative.


TimeBox 0.9.5: released 2015-Nov-30
- Introduces functions for distance matrix-based ensembles. The
  functions in RUNS.DME implement the strategies reported in the
  following paper: Giusti, R; Silva, D.F.; and Batista, E.A.P.A. "Time
  Series Classification with Representation Ensembles". Published on the
  14th International Symposium on Intelligent Data Analysis (IDA'2015).
- Adds TB.LOADFILES to load batches of files and TB.WRITECSV to write
  data as CSV files.


TimeBox 0.8.4: released 2015-Sep-14
- Deprecates the RELEASEDATE field in the version structure. This
  feature may be removed in the future;
- Removes internal documentation from TB.VERSION about unimplemented
  features: the function was supposed to check the presence or absence
  of flags when supplied a second argument.


TimeBox 0.8.3: released 2015-Sep-09